# gimpse

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/monitor/: batter.rs  battery_monitor.rs  cpu.rs  disk.rs  mod.rs
src/utils/: byte_to_readable_format.rs  mod.rs  telegram.rs
