[package]
name = "glimpse"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["full"] }
sysinfo = "0.24.0"
notify = "4.0.18"
serde = "1.0.137"
serde_json = "1.0.77"
cocoa = "0.24.0"
teloxide = "0.15.0"
dotenv = "0.15.0"
battery = "0.7.8"
